--- a/src/features/user/views/login.ejs
+++ b/src/features/user/views/login.ejs
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="" />
-    <title>sign-in</title>
+    <title>Login</title>
 
     <link
       rel="canonical"
@@ -38,7 +38,7 @@
   </head>
   <body class="text-center">
     <main class="form-signin">
-      <form>
+      <form action="/login" method="post">
         <img
           class="mb-4"
           src="Images/account.png"
@@ -51,6 +51,7 @@
         <div class="form-floating">
           <input
             type="email"
+            name="email"
             class="form-control"
             id="floatingInput"
             placeholder="name@example.com"
@@ -60,6 +61,7 @@
         <div class="form-floating">
           <input
             type="password"
+            name="password"
             class="form-control"
             id="floatingPassword"
             placeholder="Password"
@@ -73,7 +75,7 @@
           </label>
         </div>
         <button class="w-100 btn btn-lg btn-primary" type="submit">
-          Sign in
+          Login
         </button>
         <p class="mt-5 mb-3 text-muted">&copy; 2023–2024</p>
       </form>
