--- a/src/features/user/views/homepage.ejs
+++ b/src/features/user/views/homepage.ejs
@@ -16,9 +16,34 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="/homepage.css" />
   </head>
   <body>
-    <h1 class="text-center">You have access to Secured Path</h1>
+    <!-- <h3 class="text-center m-3">Welcome!</h3> -->
+    <img
+      src="/Images/Welcome aboard-amico.png"
+      alt="Welcome Image"
+      class="rounded mx-auto d-block"
+      width="400px"
+      height="400px"
+    />
+    <div class="container d-flex justify-content-around align-content-around">
+      <div>
+        <a href="/logout" class="link-button"
+          ><button class="m-3">
+            <span>Sign Out</span>
+          </button></a
+        >
+      </div>
+      <div>
+        <a href="/reset-password" class="link-button"
+          ><button class="m-3">
+            <span>Reset Password</span>
+          </button></a
+        >
+      </div>
+    </div>
+
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
