Reset Password Flow

--- a/src/features/user/views/forgotPassword.ejs
+++ b/src/features/user/views/forgotPassword.ejs
@@ -17,10 +17,12 @@
         <div class="col-md-6">
           <div class="card">
             <div class="card-header">
-              <h3 class="text-center">Reset Password</h3>
+              <h3 class="text-center">Forgot Password</h3>
             </div>
-            <div class="card-body">
-              <form action="/reset-password" method="post">
+            <div class="card-body"><% if(errors){%>
+      <div class="alert alert-danger"><%=errors%></div>
+      <%}%>
+              <form action="/forgot-password" method="post">
                 <div class="form-group bg-black">
                   <label for="email">Email</label>
                   <input
@@ -31,35 +33,6 @@
                     name="email"
                   />
                 </div>
-                <div class="form-group">
-                  <label for="currentPassword">Current Password</label>
-                  <input
-                    type="password"
-                    class="form-control"
-                    id="currentPassword"
-                    placeholder="Enter current password"
-                    name="currentPassword"
-                  />
-                </div>
-                <div class="form-group">
-                  <label for="newPassword">New Password</label>
-                  <input
-                    type="password"
-                    class="form-control"
-                    id="newPassword"
-                    name="newPassword"
-                    placeholder="Enter new password"
-                  />
-                </div>
-                <div class="form-group">
-                  <label for="token">Token</label>
-                  <input
-                    type="text"
-                    class="form-control"
-                    id="token"
-                    name="token"
-                    placeholder="Enter token"
-                  />
                 </div>
                 <button type="submit" class="btn btn-primary btn-block">
                   Submit
