--- a/src/features/user/views/homepage.ejs
+++ b/src/features/user/views/homepage.ejs
@@ -36,9 +36,9 @@
         >
       </div>
       <div>
-        <a href="/reset-password" class="link-button"
+        <a href="/forgot-password" class="link-button"
           ><button class="m-3">
-            <span>Reset Password</span>
+            <span>Forgot Password</span>
           </button></a
         >
       </div>
