--- a/src/features/user/views/login.ejs
+++ b/src/features/user/views/login.ejs
@@ -50,7 +50,7 @@
           width="72"
           height="57"
         />
-        <h1 class="h3 mb-3 fw-normal">Login</h1>
+        <h1 class="h3 mb-3 fw-normal text-light">Login</h1>
 
         <div class="form-floating">
           <input
@@ -73,7 +73,7 @@
           <label for="floatingPassword">Password</label>
         </div>
 
-        <div class="checkbox mb-3">
+        <div class="checkbox mb-3 text-light">
           <label>
             <input type="checkbox" value="remember-me" /> Remember me
           </label>
@@ -81,7 +81,9 @@
         <button class="w-100 btn btn-lg btn-primary" type="submit">
           Login
         </button>
-        <p class="mt-5 mb-3 text-muted">&copy; 2023–2024</p>
+        <p class="mt-5 mb-3 text-muted">
+          <span class="text-light">&copy; 2023–2024</span>
+        </p>
       </form>
     </main>
 
