--- a/public/signin.css
+++ b/public/signin.css
@@ -8,7 +8,7 @@ body {
   align-items: center;
   padding-top: 40px;
   padding-bottom: 40px;
-  background-image: url("/Images/Untitled\ design.png");
+  background-image: url("/Images/pexels-pixabay-257699.jpg");
   background-size: cover;
 }
 
