--- a/src/features/user/views/login.ejs
+++ b/src/features/user/views/login.ejs
@@ -73,11 +73,11 @@
           <label for="floatingPassword">Password</label>
         </div>
 
-        <div class="checkbox mb-3 text-light">
+        <!-- <div class="checkbox mb-3 text-light">
           <label>
             <input type="checkbox" value="remember-me" /> Remember me
           </label>
-        </div>
+        </div> -->
         <button class="w-100 btn btn-lg btn-primary" type="submit">
           Login
         </button>
